[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/settings.gd" id=1]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.06
anchor_top = 0.06
anchor_right = 0.94
anchor_bottom = 0.94

[node name="Title" type="Label" parent="VBox"]
text = "Settings"

[node name="ApiLabel" type="Label" parent="VBox"]
text = "Backend URL (local dev can use http://127.0.0.1:8787)"

[node name="ApiInput" type="LineEdit" parent="VBox"]
text = ""
placeholder_text = "https://... or http://127.0.0.1:8787"

[node name="HelpLabel" type="Label" parent="VBox"]
text = "(validation status)"

[node name="Buttons" type="HBoxContainer" parent="VBox"]

[node name="SaveButton" type="Button" parent="VBox/Buttons"]
text = "Save"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
text = "Back"
